Cleanup build errors